--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	                </div>
 
 
-                    <div class="navbar">
+                    <div class="navbar d-none d-lg-block d-md-block">
                         <ul class="navbar-menu">
                             <li class="navbar-item">
                                 <a href="#" class="navbar-link">About us</a>
